# plotviz

./: .gitignore  DISTRIBUTION.md  LICENSE.md  README.md  RELEASE.md  add_ons.md  create_pkg.sh  create_pkg_win.bat  docs.sh  entitlements.plist  mkdocs.yml  plotviz.spec  pyproject.toml  stable  todo.md  versions.json  xd-chart.spec
.github/workflows/: docs.yml  release.yml  tests.yml
1.6.1/: 404.html  index.html  sitemap.xml
1.6.1/advanced/: index.html
1.6.1/annotations/: index.html
1.6.1/axes/: index.html
1.6.1/building/: index.html
1.6.1/chart-types/: index.html
1.6.1/data/: index.html
1.6.1/file-formats/: index.html
1.6.1/getting-started/: index.html
1.6.1/palettes/: index.html
2.5.10/: index.html
2.6.0/: 404.html  sitemap.xml
2.7.0/: 404.html
2.7.2/: 404.html  index.html  sitemap.xml
2.7.3/: 404.html  index.html  sitemap.xml
2.7.4/: 404.html  index.html  sitemap.xml
2026.06.1/: 404.html  index.html  sitemap.xml
2026.06.2/: 404.html  index.html  sitemap.xml
assets/: pviz.icns  pvizc.icns  pvizp.icns  pvizt.icns  pvizx.icns  xd-chart.icns
data/plots/: ecdf.pviz  (+16 more)
docs/: advanced.md  annotations.md  axes.md  building.md  chart-types.md  code-runner.md  data.md  file-formats.md  getting-started.md  index.md  palettes.md  python-export.md  seaborn-explorer.md  series.md  shortcuts.md  style.md  subplots.md
examples/: example_categorical.csv  example_data_3.txt  example_error.csv  example_excel.xlsx
latest/: 404.html  index.html  sitemap.xml
plots/: chart1.pviz  chart2.pvizt  chart2.xdchart  chart3.xdchart  chart4.xdchart  chart5.pviz  chart5a.pviz  chart6.pviz  chart7.pviz  chart8.pviz  chart8a.pviz  chart9.pviz  demo-chart-1.pviz  my scheme.pvizc  my template.pvizt  myscheme.pvizt  palletes2.pvizx  series-hor.pviz
plotviz-matplotlib-plots/: bar.pviz  barbs.pviz  boxplot.pviz  bubble-old.pviz  bubble.pviz  contour.pviz  contourf.pviz  errorbar-trend.pviz  errorbar.pviz  eventplot.pviz  fill_between.pviz  hexbin.pviz  hist2d.pviz  imshow.pviz  lixo2.pvizx  pcolormesh.pviz  pie.pviz  plot_surface.pviz  plot_surface_new.pviz  plot_xy-curve_fit.pviz  plot_xy.pviz  polar.pviz  quiver.pviz  radar-new-2.pviz  scatter_xy.pviz  stairs.pviz  stem.pviz  streamplot.pviz  tricontour.pviz  tricontourf.pviz  tripcolor.pviz  triplot.pviz  waterfall.pviz
plotviz-plots/: 01_line_scatter_single.pviz  02_bar_area_1x2.pviz  03_hist_box_ecdf_1x3.pviz  04_line_bar_scatter_heatmap_2x2.pviz  05_waterfall_bubble_pie_mosaic.pviz  06_area_errorbar_step_3x1.pviz  07_violin_hist_polar_stem_2x2.pviz  08_contour_scatter_2x1.pviz  09_gallery_2x3.pviz
plotviz-samples/: boxplot_violin.csv  bubble.csv  contour_3d_surface.csv  ecdf.csv  example_data.csv  example_data.json  heatmap.csv  hist2d_hexbin.csv  histogram.csv  line_scatter_step.csv  pie.csv  polar.csv  radar.csv  seaborn-explorer-guide.md  sns_distributions.csv  sns_timeseries.csv  waterfall.csv
site/: 404.html  index.html  sitemap.xml
tests/: .fuse_hidden0000000f00000001  .fuse_hidden0000001100000002  .fuse_hidden0000001300000003  README.md  _bootstrap.py  conftest.py  test_annotations.py  test_core_purity.py  test_geometry.py  test_gui_smoke.py  test_helpers.py  test_script_gen.py  test_serialize.py  test_settings_schema.py
util/: build_reg.py
(+225 files in other folders)
